--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
   "author": "wanlee",
   "license": "MIT",
   "dependencies": {
-    "webpack": "^5.94.0"
+    "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.4.44",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.0.2",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.10",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "webpack"
   }
 }
