fix: sass load awsome font

--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "author": "wanlee",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
     "postcss": "^8.4.44",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.0.2",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.78.0",
+    "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.10",
     "webpack": "^5.94.0",
